Fixed list icon vertical aligns

--- a/src/partials/elements/_list.sass
+++ b/src/partials/elements/_list.sass
@@ -36,6 +36,7 @@ ol.ts.list li,
 .ts.list .list > .item
     display            : flex
     flex-wrap          : wrap
+    align-content      : stretch
     list-style-type    : $list_listStyleType
     list-style-position: $list_listStylePosition
     padding            : $list_itemPadding
@@ -82,11 +83,12 @@ ol.ts.list ol li,
 /* Icon */
 .ts.list .list > .item > i.icon,
 .ts.list > .item > i.icon
-    display       : block
-    margin        : 0em
-    padding-top   : $list_iconOffset
-    padding-right : $list_iconDistance
-    vertical-align: $list_iconContentVerticalAlign
+    display        : flex
+    margin         : 0em
+    height         : initial
+    padding-top    : $list_iconOffset
+    padding-right  : $list_iconDistance
+    justify-content: center
 
 .ts.list .list > .item > i.icon:only-child,
 .ts.list > .item > i.icon:only-child
@@ -232,6 +234,9 @@ ol.ts.list ol li,
 //-------------------//
 // Avatar + Description
 //-------------------//
+
+.ts.list .item > .ts.avatar.image + .content
+    line-height: 0
 
 .ts.list .item > .ts.avatar.image + .content .header
     line-height: $list_avatarContentHeaderLineHeight
