--- a/src/variables/elements/_list.variables.sass
+++ b/src/variables/elements/_list.variables.sass
@@ -51,7 +51,7 @@ $list_segmentedInvertedBorderColor: nth($inverted, 5)
 
 /* Icon */
 $list_iconDistance            : $relative4px
-$list_iconOffset              : calc((#{$list_itemLineHeight} - 1rem) / 2)
+$list_iconOffset              : 0 //calc((#{$list_itemLineHeight} - 1rem) / 2)
 $list_iconTransition          : color $defaultDuration $defaultEasing
 $list_iconVerticalAlign       : top
 $list_iconContentVerticalAlign: top
